--- a/src/app/global.css
+++ b/src/app/global.css
@@ -15,3 +15,19 @@ h1.font-semibold {
 * {
   tab-size: 2;
 }
+
+pre:not(:has(span.line)) {
+  @apply px-3.5;
+}
+
+div:has(> button[aria-label="Copy Text"]) {
+  @apply z-10;
+}
+
+aside {
+  @apply xl:[--fd-sidebar-width:20rem]! 2xl:[--fd-sidebar-width:24rem]!;
+}
+
+main#nd-docs-layout {
+  @apply 2xl:[--fd-toc-width:24rem]!;
+}
